@@ -133,7 +133,7 @@ Film::Film (boost::filesystem::path dir, bool log)
 	, _j2k_bandwidth (Config::instance()->default_j2k_bandwidth ())
 	, _isdcf_metadata (Config::instance()->default_isdcf_metadata ())
 	, _video_frame_rate (24)
-	, _audio_channels (6)
+	, _audio_channels (Config::instance()->default_dcp_audio_channels ())
 	, _three_d (false)
 	, _sequence (true)
 	, _interop (Config::instance()->default_interop ())
